<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expandable_strip"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_txt"
            android:layout_marginTop="30dp"
            android:text="@string/view_answer" />


        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:minHeight="100dp"
            app:el_duration="1000"
            app:el_parallax="0.5">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/answer_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/answered" />


                <TextView
                    android:id="@+id/sender_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/answer_txt"
                    android:padding="8dp"
                    android:text="@string/sender_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/answer_txt"
                    android:padding="8dp"
                    android:text="@string/time" />
            </RelativeLayout>


        </net.cachapa.expandablelayout.ExpandableLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>