<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topicView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/topicTextView"
        style="@style/topic_list_Style"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:hint="@string/one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight=".98"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="@string/hello_blank_fragment" />

        <ImageView
            android:id="@+id/menu_opener"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".02"
            android:contentDescription="@string/context_m"
            android:src="@drawable/menu_dots" />
    </LinearLayout>

</LinearLayout>